--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-header-buttons": "^8.0.0"
+    "react-navigation-header-buttons": "^8.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
