--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
+  "name": "recipes",
+  "version": "1.0.6",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.5",
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/drawer": "^6.1.8",
-    "@react-navigation/material-bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "expo": "~43.0.0",
-    "expo-app-loading": "~1.2.1",
-    "expo-font": "~10.0.3",
-    "expo-status-bar": "~1.1.0",
-    "expo-updates": "~0.10.15",
-    "node-fetch": "^2.6.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-paper": "^4.10.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-vector-icons": "^9.0.0",
-    "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "react-navigation-header-buttons": "^8.0.0",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "expo": "~46.0.16",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-navigation-header-buttons": "^10.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "shelljs": "^0.8.5",
-    "url-parse": "^1.5.10"
+    "expo-app-loading": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
