--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
@@ -23,8 +24,7 @@
     "react-native-screens": "~3.15.0",
     "react-navigation-header-buttons": "^10.0.0",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "expo-app-loading": "~2.1.0"
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
