--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Рецепти",
     "slug": "recipes",
-    "version": "1.0.5",
+    "version": "1.0.7",
     "orientation": "portrait",
     "icon": "./assets/icon-food.png",
     "userInterfaceStyle": "light",
@@ -26,6 +26,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3f81cb12-500a-4a1b-a88b-2d6e32e65fb5"
+      }
     }
   }
 }
